commit 1 for newyeartimmer

--- a/html/new.html
+++ b/html/new.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <title>2023 countdown timer using JavaScript with Source Code - @codingtorque </title>
 </head>
@@ -35,7 +35,7 @@
     </div>
 </div>>    
 
-    <script src="script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
